nx/test/failing/bug_logspace_division_by_zero/run.t
  $ ./bug_logspace_division_by_zero.exe
  Testing logspace division by zero bug
  Unexpected exception: Failure("BUG: logspace should have raised Division_by_zero exception")
  Fatal error: exception Failure("BUG: logspace should have raised Division_by_zero exception")
  [2]
